--- a/index.html
+++ b/index.html
@@ -1,9 +1,34 @@
-<!doctype html>
-<html>
-  <head>
-    <title>This is the my demo index page!</title>
-  </head>
-  <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-lite@5"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
+  <title>Vega-Lite Building Inventory Visualization</title>
+</head>
+<body>
+  <div id="vis"></div>
+
+  <script>
+    // Your Vega-Lite specification
+    const vegaLiteSpec = {
+      "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
+      "data": {"url": "building_inventory.json"},
+      "mark": "bar",
+      "encoding": {
+        "x": {"field": "Year Acquired", "type": "temporal", "axis": {"title": "Year Acquired"}},
+        "y": {"aggregate": "sum", "field": "Square Footage", "type": "quantitative", "axis": {"title": "Total Square Footage"}},
+        "color": {"field": "Agency Name", "type": "nominal", "legend": null},
+        "detail": {"field": "Agency Name", "type": "nominal"}
+      },
+      "config": {"view": {"height": 400, "width": 500}},
+      "title": {"text": "Square footage for the five most common departments as a function of year", "fontSize": 18}
+    };
+
+    // Embed the visualization in the "vis" div
+    vegaEmbed("#vis", vegaLiteSpec);
+  </script>
+</body>
 </html>
